@@ -89,7 +89,9 @@ typedef enum {
 #define CONTENT_MESSAGE_RECEIVED_GROUP		@"Content_MessageReceivedGroup"
 #define CONTENT_MESSAGE_RECEIVED_FIRST		@"Content_MessageReceivedFirst"
 #define CONTENT_MESSAGE_RECEIVED_BACKGROUND	@"Content_MessageReceivedBackground"
-#define CONTENT_MESSAGE_RECEIVED_BACKGROUND_GROUP		@"Content_MessageReceivedBackgroundGroup"
+#define CONTENT_MESSAGE_RECEIVED_BACKGROUND_GROUP @"Content_MessageReceivedBackgroundGroup"
+#define CONTENT_MESSAGE_RECEIVED_AWAY		@"Content_MessageReceivedAway"
+#define CONTENT_MESSAGE_RECEIVED_AWAY_GROUP	@"Content_MessageReceivedAwayGroup"
 #define CONTENT_NUDGE_BUZZ_OCCURED			@"Content_NudgeBuzzOccured"
 #define CONTENT_CONTACT_JOINED_CHAT			@"Content_ContactJoinedChat"
 #define CONTENT_CONTACT_LEFT_CHAT			@"Content_ContactLeftChat"
